--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://admin:v0CjWExwxIfffURp@nosql.k7ol3.azure.mongodb.net/NoSQL?retryWrites=true&w=majority",
+    "DatabaseName": "NoSQL"
+  }
 }
