--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>NoSQL.Models</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.11.2" />
+  </ItemGroup>
+
 </Project>
