--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\UserTest\Index.cshtml" />
+  </ItemGroup>
+
 </Project>
