--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -20,4 +20,8 @@
     <_ContentIncludedByDefault Remove="Views\UserTest\Index.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages" />
+  </ItemGroup>
+
 </Project>
