--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "MongoDbSettings": {
     "ConnectionString": "mongodb+srv://admin:v0CjWExwxIfffURp@nosql.k7ol3.azure.mongodb.net/NoSQL?retryWrites=true&w=majority",
-    "DatabaseName": "NoSQL"
+    "DatabaseName": "NoSQL",
+    "JwtSecret": "hunter2"
   }
 }
