--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.11.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
