--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UserID": "655060.NoDesk@gmail.com",
+  "Password": "NoDesk655060&!",
+  "SMTPPort": "587",
+  "Host": "smtp.gmail.com"
+
 }
